--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,10 @@
     <div id="result" class="m-3">
         {{ result }}
     </div>
+    <div id="nft" class="m-3">
+      <label for="nft" class="col-sm-2 col-form-label">你的八字推算出屬於你的NFT:</label><br>
+      <img src="{{ url_for('static', filename = nft_file) }}" alt="" width="300" height="300">
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 
